HPC-8566: Prevent whitespace between header and content on global section pages, assuming a hero image or link carousel will be used

--- a/html/themes/custom/common_design_subtheme/sass/cd/_cd-layout.scss
+++ b/html/themes/custom/common_design_subtheme/sass/cd/_cd-layout.scss
@@ -1,3 +1,12 @@
+.cd-layout-container {
+  @supports (display: grid) {
+    @include tablet {
+      grid-template-rows: 95px auto 1fr auto;
+      grid-auto-rows: auto;
+    }
+  }
+}
+
 // One sidebar.
 .cd-layout-with-sidebar-first .cd-layout-sidebar-first,
 .cd-layout-with-sidebar-second .cd-layout-sidebar-second {
