--- a/html/themes/custom/common_design_subtheme/sass/cd/cd-header/_cd-header.scss
+++ b/html/themes/custom/common_design_subtheme/sass/cd/cd-header/_cd-header.scss
@@ -30,6 +30,10 @@
   }
 }
 
+.cd-site-header {
+  border-bottom: 0;
+}
+
 .cd-site-header__inner {
   @supports (display: grid) {
     grid-template-columns: 340px 1fr;
