--- a/html/themes/custom/common_design_subtheme/sass/ghi/blocks/_common.scss
+++ b/html/themes/custom/common_design_subtheme/sass/ghi/blocks/_common.scss
@@ -49,6 +49,7 @@
 
   .layout__region &:first-child {
     margin-top: 0;
+    padding-top: 0;
   }
 
   &.ghi-block--hidden-preview > *:not(.contextual) {
